<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="108dp"
        android:layout_height="161dp"
        />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/nama_user"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:textStyle="bold"
        android:text="@string/username" />

    <TextView
        android:id="@+id/txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="39dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/company"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="61dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/location"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="86dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="Repository"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_repository"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="47dp"
        android:layout_marginTop="107dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/repository" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="169dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="Followers"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_follower"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="182dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/follower" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="169dp"
        android:layout_marginTop="69dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="Following"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="28dp"
        android:layout_height="45dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="186dp"
        android:layout_marginTop="92dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/following" />


</RelativeLayout>