<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="218dp"
        android:layout_height="216dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/img_photo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="-1dp"
        android:background="#bbb" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_photo"
        android:layout_marginStart="-313dp"
        android:layout_marginTop="245dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/nama_user"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_photo"
        android:layout_marginStart="-197dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/username"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-303dp"
        android:layout_marginTop="17dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/company"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-303dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/location"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-86dp"
        android:layout_marginTop="-191dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="Repository"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_repository"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-63dp"
        android:layout_marginTop="-153dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/repository"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-287dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-189dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="Followers"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_follower"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-266dp"
        android:layout_marginTop="-153dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/follower"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-184dp"
        android:layout_marginTop="-191dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="Following"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="64dp"
        android:layout_height="44dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="-167dp"
        android:layout_marginTop="-154dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/following"
        android:textSize="20sp" />

</RelativeLayout>
</ScrollView>